Use Sublime Text for build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,15 +11,13 @@ add_executable(
 set_target_properties(
 	${PROJECT_NAME}
 	PROPERTIES
-	MACOSX_BUNDLE_INFO_PLIST Info.plist
-	MACOSX_BUNDLE_ICON_FILE  AppIcon.icns
+	MACOSX_BUNDLE_INFO_PLIST     "${CMAKE_CURRENT_SOURCE_DIR}/Info.plist"
+	MACOSX_BUNDLE_ICON_FILE      "AppIcon"
+	MACOSX_BUNDLE_BUNDLE_NAME    "${PROJECT_NAME}"
+	MACOSX_BUNDLE_BUNDLE_VERSION "0.1"
+	MACOSX_BUNDLE_COPYRIGHT      "${PROJECT_NAME} macOS Runner is licensed under the MIT License"
+	MACOSX_BUNDLE_GUI_IDENTIFIER "com.nanoant.webapp.${PROJECT_NAME}"
 	)
-
-set(MACOSX_BUNDLE_BUNDLE_NAME "${PROJECT_NAME}")
-set(MACOSX_BUNDLE_BUNDLE_VERSION "0.1")
-set(MACOSX_BUNDLE_COPYRIGHT "${PROJECT_NAME} macOS Runner is licensed under the MIT License")
-set(MACOSX_BUNDLE_GUI_IDENTIFIER "com.nanoant.webapp.${PROJECT_NAME}")
-set(MACOSX_BUNDLE_ICON_FILE "AppIcon")
 
 set(ICON_TARGET "${CMAKE_BINARY_DIR}/AppIcon.iconset")
 set(ICON_OUTPUT "${CMAKE_BINARY_DIR}/AppIcon.icns")
