--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ set_target_properties(
 	MACOSX_BUNDLE_INFO_PLIST     "${CMAKE_CURRENT_SOURCE_DIR}/Info.plist"
 	MACOSX_BUNDLE_ICON_FILE      "AppIcon"
 	MACOSX_BUNDLE_BUNDLE_NAME    "${PROJECT_NAME}"
+	MACOSX_BUNDLE_INFO_STRING    "${PROJECT_NAME}"
 	MACOSX_BUNDLE_BUNDLE_VERSION "0.1"
 	MACOSX_BUNDLE_COPYRIGHT      "${PROJECT_NAME} macOS Runner is licensed under the MIT License"
 	MACOSX_BUNDLE_GUI_IDENTIFIER "com.nanoant.webapp.${PROJECT_NAME}"
